# terrible_rust_shell

./: Cargo.toml  README.md
src/: grammar.pest  main.rs
