[package]
name = "rust_shell"
version = "0.1.0"
authors = ["Alex Curtin <alexander.curtin@temple.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
nix = "0.14.1"
libc = "0.2"
pest = "2"
pest_derive = "2"
os_pipe = "0.8.1"
